# pyarchivist

./: AGENTS.md  README.md  __init__.py  main.py  prek.toml  pyproject.toml
.agents/instructions/: agent-workflows.instructions.md  common-workflows.instructions.md  dependencies.instructions.md  developer-workflows.instructions.md  editing-guidelines.instructions.md  formatting.instructions.md  python-entry-points.instructions.md  release.instructions.md  testing.instructions.md
.agents/prompts/: bump-version.prompt.md
.agents/skills/add-archive/: SKILL.md
.agents/skills/update-index/: SKILL.md
.agents/skills/validate-builds/: SKILL.md
.github/instructions/: agent-workflows.instructions.md  architecture.instructions.md  archive-format.instructions.md  common-workflows.instructions.md  dependencies.instructions.md  developer-workflows.instructions.md  editing-guidelines.instructions.md  formatting.instructions.md  git-commits.instructions.md  release.instructions.md  security.instructions.md  testing.instructions.md
.github/prompts/: bump-version.prompt.md
.github/skills/add-archive/: SKILL.md
.github/skills/update-index/: SKILL.md
.github/skills/validate-builds/: SKILL.md
.github/workflows/: ci.yml
Wikimedia_Commons/: main.py
src/pyarchivist/: __init__.py  __main__.py  main.py  meta.py  types.py
src/pyarchivist/Wikimedia_Commons/: __init__.py  __main__.py  main.py  models.py
tests/: conftest.py  test_basic.py  test_docstrings.py  test_module_exports.py  utils.py
tests/pyarchivist/: test___init__.py  test_meta.py
tests/src/: __init__.py
tests/src/pyarchivist/: __init__.py  test___main__.py  test_main.py  test_meta.py  test_types.py
tests/src/pyarchivist/Wikimedia_Commons/: __init__.py  test___main__.py  test_main.py  test_models.py
