[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

# update `src/pyarchivist/meta.py`
[project]
name = "pyarchivist"
version = "3.1.0"
requires-python = ">=3.12.0"
description = "Archive things from the Internet."
license = {file = "LICENSE.txt"}
readme = "README.md"
dependencies = [
  "aiohttp>=3.8.4",
  "anyio>=3.6.2",
  "asyncer>=0.0.17",
  "html2text>=2020.1.16",
  "pydantic>=2.12.0",
  "uvloop>=0.22.0; platform_system != 'Windows'",
  "winloop>=0.5.0; platform_system == 'Windows'",
  "yarl>=1.9.2",
]

authors = [
    {name = "William So", email = "polyipseity@gmail.com"},
]
keywords = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: General",
    "Topic :: Text Processing :: Markup",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.scripts]
pyarchivist = "pyarchivist.__main__:__main__"

[project.urls]
repository = "https://github.com/polyipseity/pyarchivist.git"

[dependency-groups]
dev = [
  "hypothesis>=6.151.0",
  "prek>=0.3.0",
  "pyright>=1.1.408",
  "pytest>=9.0.0",
  "pytest-cov>=7.0.0",
  "pytest-xdist>=3.8.0",
  "ruff>=0.15.0",
  "rumdl>=0.1.20",
]

[tool.pyright]
exclude = [
  "**/node_modules",
  "**/__pycache__",
  "**/.*",
  ".venv",
  # self
]
typeCheckingMode = "strict"
venv = ".venv"
venvPath = "."
pythonPlatform = "All"
pythonVersion = "3.12"
deprecateTypingAliases = true
enableReachabilityAnalysis = true
strictDictionaryInference = true
strictListInference = true
strictSetInference = true

[[tool.pyright.executionEnvironments]]
extraPaths = ["src", "."]
reportPrivateUsage = "none"
root = "tests"

[[tool.pyright.executionEnvironments]]
root = "src"

[[tool.pyright.executionEnvironments]]
root = "."

[tool.pytest.ini_options]
addopts = ["--cov=./", "--cov-report=term-missing", "--dist=loadscope", "-n=auto", "--strict-markers"]
testpaths = [
  ".agents/skills/**/tests_*",
  "tests",
]
python_files = "test_*.py"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# Enable Pylint-derived rule that disallows imports outside module top-level
# (import-outside-top-level / PLC0415). Ruff 0.12.0+ provides this rule.
extend-select = ["I", "PLC0415"]

# rumdl (Markdown linter/formatter) configuration - prefer storing in pyproject
# so tools discover it when running from subdirectories.
[tool.rumdl]
extends =  ".rumdl.toml" # redirect to .rumdl.toml in the same directory

[tool.uv]
required-version = ">=0.9.0,<0.11.0"

[tool.uv.build-backend]
source-include = ["py.typed"]
